# simulateur_trafic

./: .coverage  README.md  historique.json  pyproject.toml  requirements.txt  resultats.csv
.github/workflows/: ci.yml  release.yml
simulateur_trafic/: historique.json  main.py  requirements.txt  resultats.csv  setup.py
simulateur_trafic/core/: analyseur.py  simulateur.py
simulateur_trafic/data/: scratch.json
simulateur_trafic/docs/source/: conf.py  inout.rst
simulateur_trafic/exceptions/: exceptions.py
simulateur_trafic/inout/: affichage.py  affichage_cython.c  affichage_cython.pyx
simulateur_trafic/models/: feu_rouge.py  reseau.py  route.py  vehicule.py
simulateur_trafic/simulateur_trafic_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simulateur_trafic/source/: modules.rst
simulateur_trafic/tests/: conftest.py  test_affichage.py  test_analyseur.py  test_export.py  test_reseau.py  test_route.py  test_route_feu.py  test_simulateur.py  test_vehicule.py
