[project]
name = "simulateur_trafic"
version = "2.0"
description = "un simulateur modulaire du trafic routier"
authors = [
    {name = "Your Name",email = "amaidiamaidi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "numba (>=0.62.1,<0.63.0)"
]
